#4843 - Promote sidebar curation mode to proper curation page
- Cleaning up